--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -91,7 +91,7 @@
     key="confirm"
   ></p-confirmDialog>
   <h5 class="mat-headline-5 fw-medium">
-    Tạo template công việc cho các trường mầm non
+    Tạo mẫu công việc cho các trường mầm non
   </h5>
   <div class="card">
     <p-treeTable
@@ -107,13 +107,13 @@
             <h6 class="mat-headline-6">Danh sách công việc</h6>
           </div>
           <div>
-            <button
-              [disabled]="assignments.length != 0 || issueNotFound"
-              pButton
-              (click)="openDetail(null, 'addroot')"
-            >
-              Tạo mới
-            </button>
+<!--            <button-->
+<!--              [disabled]="assignments.length != 0 || issueNotFound"-->
+<!--              pButton-->
+<!--              (click)="openDetail(null, 'addroot')"-->
+<!--            >-->
+<!--              Tạo mới-->
+<!--            </button>-->
           </div>
         </div>
       </ng-template>
