--- a/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
@@ -140,6 +140,7 @@
     >
       <button pButton (click)="onCreateInspectionPlan()"
               *ngIf="isDirector"
+              [disabled]="!issue || issue.status?.statusId == 2"
       >Tạo mới
       </button>
     </div>
