fix guidance document create when no issue is found

--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -95,6 +95,7 @@
         pButton
         (click)="onCreateGuidanceDocument()"
         *ngIf="isDirector || isViceDirector"
+        [disabled]="!issue || issue.status?.statusId == 4 "
       >
         Tạo mới
       </button>
