Fix school initiation bugs

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -24,7 +24,7 @@
   <p-confirmDialog
     [style]="{ width: '50vw' }"
     acceptLabel="Xác nhận"
-    rejectLabel="Hủy bỏ"
+    rejectLabel="Hủy bỏigi"
     key="confirmSchoolInitiationplan"
   ></p-confirmDialog>
   <!-- file preview -->
