--- a/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
@@ -323,7 +323,7 @@
                 pTooltip="Phiên thanh tra"
                 tooltipPosition="left"
               >
-                <i class="bi bi-info-square"></i>
+                <i class="bi bi-journal-bookmark-fill"></i>
               </button>
             </div>
           </div>
