--- a/src/app/features/post-login/dashboard/dashboard.component.html
+++ b/src/app/features/post-login/dashboard/dashboard.component.html
@@ -7,11 +7,11 @@
         <div class="card mb-0 p-4">
           <div class="row">
             <div class="col-md-10">
-              <h6 class="mat-headline-6 fs-18 mb-2">Số trường chưa kiểm tra</h6>
+              <h6 class="mat-headline-6 fs-18 mb-2">Số trường đã kiểm tra</h6>
               <label class="fs-24 fw-medium mb-2" *ngIf="!issue">0</label>
 
-              <label class="fs-24 fw-medium mb-2">{{
-                numberOfNonInspectedSchool
+              <label class="fs-24 fw-medium mb-2" *ngIf="issue" >{{
+                numberOfNonInspectedSchool ? numberOfNonInspectedSchool : 0
               }}</label>
               <br />
             </div>
