Fix record detail toast

--- a/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
+++ b/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
@@ -4,8 +4,7 @@
   rejectLabel="Hủy bỏ"
   key="deleteDocument"
 ></p-confirmDialog>
-<p-toast position="top-right" key="deleteComplete"></p-toast>
-<p-toast position="top-right" key="deleteInComplete"></p-toast>
+<p-toast position="top-right" key="recordDetail"></p-toast>
 <p-dialog header="Chi tiết mveục kiểm tra"
           [(visible)]="detailRecordPopupVisible"
           [modal]="true"
