--- a/src/app/features/post-login/guidance-document/guidance-document-create/guidance-document-create.component.scss
+++ b/src/app/features/post-login/guidance-document/guidance-document-create/guidance-document-create.component.scss
@@ -58,13 +58,27 @@
     }
   }
 }
-.p-button {
-  background-color: $primary;
-  border-radius: 8px;
-  border: solid 1px $primary;
-  transition: all 0.5s ease;
-  &:hover {
-    background-color: $primary-hover;
-    border-color: $primary-hover;
+
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+}
+
+:host ::ng-deep .p-dialog-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  .p-button {
+    margin-left: 30px;
+    width: 150px;
   }
 }
