Fix delete task document bugs

--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -12,6 +12,7 @@
 >
 </app-update-record>
 <app-record-detail
+  [canDeleteDocument]="canDeleteDocument"
   [canUploadDocument]="canUploadDocument"
   [recordId]="recordId"
   [detailRecordPopupVisible]="detailRecordPopupVisible"
