--- a/src/app/features/post-login/inspection/record/update-record/update-record.component.html
+++ b/src/app/features/post-login/inspection/record/update-record/update-record.component.html
@@ -1,5 +1,4 @@
-<p-toast position="top-right" key="updateRecordFail"></p-toast>
-<p-toast position="top-right" key="updateRecordComplete"></p-toast>
+<p-toast position="top-right" key="updateRecord"></p-toast>
 <p-confirmDialog
   [style]="{ width: '50vw' }"
   acceptLabel="Xác nhận"
