--- a/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
+++ b/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
@@ -2,10 +2,10 @@
   [style]="{width: '50%'}"
   acceptLabel="Xác nhận"
   rejectLabel="Hủy bỏ"
-  key="deleteDocument"
+  key="recordDetail"
 ></p-confirmDialog>
 <p-toast position="top-right" key="recordDetail"></p-toast>
-<p-dialog header="Chi tiết mveục kiểm tra"
+<p-dialog header="Chi tiết mục kiểm tra"
           [(visible)]="detailRecordPopupVisible"
           [modal]="true"
           [style]="{ width: '45%' }"
@@ -31,7 +31,7 @@
     [visible]="deleteDocumentSubmitted"
     [completed]="deleteDocumentCompleted"
     [header]="'Xóa tài liệu'"
-    [progress]="'Đang đang xóa tài liệu'"
+    [progress]="'Đang xóa tài liệu'"
     [complete]="'Xóa tài liệu thành công'"
   >
   </app-loading-complete-dialog>
