--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -9,7 +9,7 @@
   <h5 class="mat-headline-5 fw-medium mb-4">
     Kế hoạch thực hiện nhiệm vụ năm học
   </h5>
-  <p-toast></p-toast>
+  <p-toast key="toastSchoolIni"></p-toast>
   <app-loading-complete-dialog
     [visible]="isLoading"
     [completed]="submitCompleted"
@@ -24,7 +24,7 @@
   <p-confirmDialog
     [style]="{ width: '50vw' }"
     acceptLabel="Xác nhận"
-    rejectLabel="Hủy bỏigi"
+    rejectLabel="Hủy bỏ"
     key="confirmSchoolInitiationplan"
   ></p-confirmDialog>
   <!-- file preview -->
