search inspection document

--- a/src/app/features/post-login/inspection/inspection-school-document/inspection-school-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-school-document/inspection-school-document.component.html
@@ -134,6 +134,11 @@
             <div>
               <h6 class="mat-headline-6">Chi tiết hồ sơ</h6>
             </div>
+            <div class="search-button">
+              <button pButton (click)="searchDialogVisible = true">
+                Tìm kiếm
+              </button>
+            </div>
           </div>
         </ng-template>
         <ng-template pTemplate="header">
@@ -146,7 +151,12 @@
           <tr [ttRow]="rowNode" class="d-flex justify-content-between">
             <td class="folder">
               <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
-              <i class="bi bi-folder-fill folder-icon"></i>
+              <ng-container *ngIf="!rowData.node.task">
+                <i class="bi bi-folder-fill folder-icon"></i>
+              </ng-container>
+              <ng-container *ngIf="rowData.node.task">
+                <i class="bi bi-card-checklist task-icon"></i>
+              </ng-container>
               {{ rowData.node.assignmentName }}
             </td>
             <ng-container>
@@ -168,6 +178,88 @@
         </ng-template>
       </p-treeTable>
     </div>
+    <p-dialog
+      header="Tìm kiếm công việc"
+      [(visible)]="searchDialogVisible"
+      [style]="{ width: '60vw', height: '600px' }"
+      [draggable]="false"
+      [resizable]="false"
+      (onNodeExpand)="onNodeExpand($event)"
+      (onNodeCollapse)="onNodeCollapse($event)"
+    >
+      <div class="container-fluid">
+        <div class="row my-3 d-flex justify-content-between align-items-center">
+          <input
+            class="w-100"
+            pInputText
+            [(ngModel)]="searchData"
+            class="search"
+            placeholder="Tìm kiếm"
+            (keyup)="loadAssignment()"
+          />
+
+          <!-- <div class="col-md-2 d-flex justify-content-end">
+        <button pButton class="">Tra cứu nâng cao</button>
+      </div> -->
+        </div>
+        <div class="row mt-2">
+          <ng-container *ngIf="searchItem && searchItem.length > 0; else noAss">
+            <div class="row search-heading">
+              <div class="col-md-5">
+                <label class="fs-18 fw-medium">Địa chỉ</label>
+              </div>
+              <div class="col-md-6">
+                <label class="fs-18 fw-medium">Tên công việc</label>
+              </div>
+              <div class="col-md-1"></div>
+            </div>
+            <div class="search-result" (scroll)="onResultScroll($event)">
+              <ng-container *ngFor="let item of searchItem">
+                <div
+                  class="row mt-2 children d-flex align-items-center"
+                  (click)="
+                    navigateSearch(
+                      item.searchedAssignment,
+                      item.idsOfBreadcrumb
+                    )
+                  "
+                >
+                  <div class="row">
+                    <div
+                      class="col-md-5"
+                      pTooltip="{{ item.breadcrumb }}"
+                      tooltipPosition="top"
+                    >
+                      <span class="color-gray">{{
+                        item.breadcrumb | ellipsis : 50
+                      }}</span>
+                    </div>
+                    <div class="col-md-6 fw-medium">
+                      {{ item.searchedAssignment.assignmentName }}
+                    </div>
+                    <div class="col-md-1"></div>
+                  </div>
+                </div>
+              </ng-container>
+            </div>
+          </ng-container>
+          <ng-template #noAss>
+            <div
+              class="empty-assignment row d-flex justify-content-center align-items-center"
+            >
+              <div class="empty-assignment-img">
+                <img src="../../../../../../assets/img/not-found-data.svg" />
+              </div>
+              <div
+                class="empty-assignment-mess mt-2 d-flex justify-content-center align-items-center"
+              >
+                <label class="fw-medium fs-18">Không tìm thấy công việc</label>
+              </div>
+            </div>
+          </ng-template>
+        </div>
+      </div>
+    </p-dialog>
   </ng-container>
   <ng-template #noSchoolAssignments>
     <div>
