--- a/src/app/features/post-login/issue/create-issue/create-issue.component.html
+++ b/src/app/features/post-login/issue/create-issue/create-issue.component.html
@@ -17,6 +17,12 @@
   [fail]="'Tạo kế hoạch kiểm tra không thành công'"
 >
 </app-loading-complete-dialog>
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  acceptLabel="Xác nhận"
+  rejectLabel="Hủy bỏ"
+  key="createIssue"
+></p-confirmDialog>
 <div class="container-fluid">
   <tui-breadcrumbs
     size="l"
