--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -65,7 +65,7 @@
       <div class="w-100 d-flex justify-content-center my-1" *ngIf="listEditable && selectedInspectors && selectedInspectors.length > 0">
         <div *ngIf="toggleChange">
           <button type="button" pButton class="create-inspector"
-                  (click)="changeToggleStatus()">Chỉnh sửa ban KTNB
+                  (click)="changeToggleStatus()">Chỉnh sửa ban kiểm tra
           </button>
         </div>
         <div *ngIf="!toggleChange" class="w-100 px-1 d-flex flex-row justify-content-between align-items-center">
