--- a/src/app/features/post-login/issue/component/issue-inspector-list/issue-inspector-list.component.html
+++ b/src/app/features/post-login/issue/component/issue-inspector-list/issue-inspector-list.component.html
@@ -12,7 +12,7 @@
 ></p-confirmDialog>
 <div *ngIf="selectedInspectors && selectedInspectors.length == 0 && listEditable; else inspectorList"
      class="text-center">
-  <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban KTNB</button>
+  <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban kiểm tra</button>
 </div>
 <ng-template #inspectorList>
   <div class="list-inspector h-100 d-flex flex-column">
@@ -65,7 +65,7 @@
       <div class="w-100 d-flex justify-content-center my-1" *ngIf="listEditable">
         <div *ngIf="toggleChange">
           <button type="button" pButton class="create-inspector"
-                  (click)="changeToggleStatus()">Chỉnh sửa ban KTNB
+                  (click)="changeToggleStatus()">Chỉnh sửa ban kiểm tra
           </button>
         </div>
         <div *ngIf="!toggleChange" class="w-100 px-1 d-flex flex-row justify-content-between align-items-center">
