--- a/src/app/features/post-login/issue/create-issue/create-issue.component.scss
+++ b/src/app/features/post-login/issue/create-issue/create-issue.component.scss
@@ -22,6 +22,19 @@
   }
 }
 
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+}
+
 .document-item {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   .col-md-6, .col-md-3{
@@ -82,5 +95,15 @@
       background-color: $primary-hover;
       border-color: $primary-hover;
     }
+  }
+}
+
+:host ::ng-deep .p-dialog-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .p-button {
+    margin-left: 30px;
+    width: 150px;
   }
 }
