fix bug create template

--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="mb-5">
-      <label class="fw-medium mb-1">Mô tả chi tiết</label>
+      <label class="fw-medium mb-1">Mô tả chi tiết <span class="p-error">*</span></label>
       <br />
       <textarea
         class="mb-1"
@@ -179,7 +179,7 @@
             pButton
             (click)="sendToSchools()"
           >
-            Gửi template
+            Gửi mẫu công việc
           </button>
         </div>
       </ng-template>
